--- a/src/App.css
+++ b/src/App.css
@@ -58,9 +58,37 @@ p{
   border: #3fbf6b !important;
 }
 
+.btn:hover{
+  background-color: #5ee08c !important;
+  border: #3fbf6b !important;
+}
+
 .btn a{
   color: white
 }
+
+.fa-plus-circle{
+  color: #3FBF6B;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  
+}
+
+.fa-plus-circle:hover{
+  color: #5ee08c;
+  cursor: pointer;
+}
+
+.fa-plus-circle:focus, .fa-plus-circle:active {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
 .kratomInfo{
   margin-top: 65px;
 }
