--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,18 @@ p{
 }
 
 #shoppingCartDropDown{
-  margin-right: 50px;
+  margin: 20px 0;
+  float: right;
+  background: white;
+  width: 320px;
+  position: relative;
+  margin-right: 225px;
+  border-radius: 3px;
+  padding: 20px;
+}
+
+.badge-light{
+  color: rgba(0, 0, 0, 0.5);
 }
 
 #shoppingCartDropDown:hover{
@@ -180,3 +191,10 @@ form label{
 #closeUp{
   border-radius: 5px;
 }
+
+
+.shopping-cart-header {
+    border-bottom: 1px solid #E8E8E8;
+    padding-bottom: 15px;
+    width: 300px;
+  }
