--- a/src/App.css
+++ b/src/App.css
@@ -100,8 +100,8 @@ p{
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
   -webkit-transition-property: transform;
   transition-property: transform;
   
@@ -113,8 +113,8 @@ p{
 }
 
 .fa-plus-circle:focus, .fa-plus-circle:active {
-  -webkit-transform: scale(1.2);
-  transform: scale(1.2);
+  -webkit-transform: scale(1.3);
+  transform: translateY(4px);
 }
 
 .kratomInfo{
