--- a/src/App.css
+++ b/src/App.css
@@ -100,11 +100,6 @@ p{
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  -webkit-transition-duration: 0.5s;
-  transition-duration: 0.5s;
-  -webkit-transition-property: transform;
-  transition-property: transform;
-  
 }
 
 .fa-plus-circle:hover{
@@ -112,9 +107,9 @@ p{
   cursor: pointer;
 }
 
-.fa-plus-circle:focus, .fa-plus-circle:active {
-  -webkit-transform: scale(1.3);
-  transform: scale(1.3);
+.fa-plus-circle:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .kratomInfo{
