--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,10 @@ p{
   color: rgba(0, 0, 0, 0.5);
   margin-right: 15px;
 }
+.dropdown-item{
+  background-color: white !important;
+}
+
 #home:hover{
   color: rgba(0, 0, 0, 0.75)
 }
@@ -193,11 +197,64 @@ form label{
   border-radius: 5px;
 }
 
-
 .shopping-cart-header {
     border-bottom: 1px solid #E8E8E8;
     padding-bottom: 15px;
     width: 300px;
   }
 
+.login-container{
+    margin-top: 5%;
+    margin-bottom: 5%;
+    border-radius: 5px;
+}
+
+.login-form-1{
+    padding: 5%;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+}
+.login-form-1 h3{
+    text-align: center;
+    color: #333;
+}
+.login-form-2{
+    padding: 5%;
+    background: #3fbf6b;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+}
+.login-form-2 h3{
+    text-align: center;
+    color: #fff;
+}
+.login-container form{
+    padding: 10%;
+}
+.btnSubmit
+{
+    width: 50%;
+    border-radius: 1rem;
+    padding: 1.5%;
+    border: none;
+    cursor: pointer;
+}
+.login-form-1 .btnSubmit{
+    font-weight: 600;
+    color: #fff;
+    background-color: #3fbf6b;
+}
+.login-form-2 .btnSubmit{
+    font-weight: 600;
+    color: #3fbf6b;
+    background-color: #fff;
+}
+.login-form-2 .ForgetPwd{
+    color: #fff;
+    font-weight: 600;
+    text-decoration: none;
+}
+.login-form-1 .ForgetPwd{
+    color: #3fbf6b;
+    font-weight: 600;
+    text-decoration: none;
+}
   
