--- a/src/App.css
+++ b/src/App.css
@@ -156,7 +156,7 @@ p{
 
 .productDisplay{
   background-color: whitesmoke;
-  border: none
+  border: none;
 }
 .card-body{
   border: solid 1px #3FBF6B
